Wed Jan 23 18:20:13 2002  George Lebl <jirka@5z.com>

	* menu.[ch], menu-util.c, applet.c, foobar-widget.c:  Make sure
	  menus appear within xinerama boundaries.  Those that don't like
	  menu.c style of coding should NOT look at this code.  But it
	  works.

	* multiscreen-stuff.c: reorder the screens in the fake debugging
	  setup.

	* basep-widget.c: fix screen_change signal signature

	* foobar-widget.c: add some corners.  Yay we half look like a mac
	  now.  Now if we could only get bottom corners as well.  Maybe
	  in time.

2002-01-23  Padraig O'Briain  <padraig.obriain@sun.com>

	* applet.c: Add applet_do_popup_menu() and applet_popup_menu() to
	support popping up of menu using Shift+F10 for buttons on the panel.

	* basep_widget.c (base_widget_focus_return):
	Update to forget previously focussed widget so that Ctrl+Tab followed
	by Tab gives always gives focus to first button 

	* menu.c: Add menu_button_menu_popup() and menu_button_notify() to
	support menu popup when menu icon receives focus.
	Define callback for "clicked" to be menu_button_pressed so that
	pressing Enter or Space on a focussed menu icon activates its menu.
	
Tue Jan 22 16:11:47 2002  George Lebl <jirka@5z.com>

	* quick-desktop-reader.c: when testing for tryexec, just do an
	  access (foo, X_OK) if it's an absolute filename.  Also put
	  the debug conditional around ALL the g_prints

2002-01-22  Anders Carlsson  <andersca@gnu.org>

	* button-widget.c: Lower the button displacement.

2002-01-22  Padraig O'Briain  <padraig.obriain@sun.com>

	* basep_widget.c: Add new function basep_widget_move_focus to
	implement GtkWidgetClass's move_focus; it causes a icon in the panel
	to receive focus initially instead of hide/show button when Tab is
	pressed when the panel has focus

Mon Jan 21 19:20:06 2002  George Lebl <jirka@5z.com>

	* logout.c: block the logout signal while we're in the signal handler

	* main.c: remove the I'm on crack dialog.  it's pissing the shit out