@@ -1,3 +1,7 @@
+Thu Jan 24 16:20:47 2002  George Lebl <jirka@5z.com>
+
+	* menu.c: fix the reposition hack not to spew warnings
+
 Wed Jan 23 18:20:13 2002  George Lebl <jirka@5z.com>
 
 	* menu.[ch], menu-util.c, applet.c, foobar-widget.c:  Make sure
